<resources>
    <string name="app_name">카톡 자동답장 도우미</string>
    <string name="theme_mode_system">시스템</string>
    <string name="theme_mode_light">라이트</string>
    <string name="theme_mode_dark">다크</string>
</resources>
